# PerfWeave

./: .cursorrules  .gitignore  Cargo.toml  Dockerfile  README.md  Two-Plane Rework + SOL Kernel Profile.md  docker-compose.yml
crates/perfweave-agent/: Cargo.toml
crates/perfweave-agent/src/: clock_sync.rs  config.rs  grpc_client.rs  lib.rs  main.rs  ring.rs  rpc_server.rs
crates/perfweave-agent/src/sampler/: cupti.rs  dcgm.rs  mod.rs  nvml.rs  synthetic.rs  tegra.rs
crates/perfweave-api/: Cargo.toml
crates/perfweave-api/src/: app.rs  arrow_tile.rs  graphql.rs  imports.rs  lib.rs  main.rs  timeline.rs
crates/perfweave-cli/: Cargo.toml
crates/perfweave-cli/src/: doctor.rs  local_agent.rs  main.rs  validate_clocks.rs
crates/perfweave-collector/: Cargo.toml
crates/perfweave-collector/src/: clickhouse_sink.rs  lib.rs  main.rs  migrations.rs  server.rs
crates/perfweave-common/: Cargo.toml
crates/perfweave-common/src/: clock.rs  intern.rs  lib.rs  logging.rs
crates/perfweave-cupti-inject/: Cargo.toml
crates/perfweave-cupti-inject/src/: activity.rs  callback.rs  lib.rs  pm.rs  transport.rs
crates/perfweave-nsys-import/: Cargo.toml
crates/perfweave-nsys-import/src/: main.rs
crates/perfweave-proto/: Cargo.toml  build.rs
crates/perfweave-proto/src/: lib.rs
crates/perfweave-server/: Cargo.toml
crates/perfweave-server/src/: fast_ring.rs  lib.rs  live.rs  main.rs  replay.rs  spike_detect.rs
crates/perfweave-server/src/api/: app.rs  graphql.rs  imports.rs  lod.rs  mod.rs  timeline.rs
crates/perfweave-server/src/ingest/: grpc.rs  mod.rs  skew.rs
crates/perfweave-server/src/store/: ch.rs  migrations.rs  mod.rs  sink.rs
migrations/: 0001_events.sql  0002_strings.sql  0003_tiles.sql  0004_spikes.sql  0005_nsys_imports.sql  0006_shed_metric_tiles.sql  0007_markers.sql  0008_kernel_sol.sql
proto/: perfweave.proto
scripts/: bench_frontend.md  bench_overhead.sh
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api-imports.ts  api.ts  live.ts  styles.css
web/src/panels/: SidePanel.tsx  SpikeDrilldown.tsx
web/src/timeline/: Timeline.tsx  metrics.ts  renderer.ts  shaders.ts  synthetic.ts
