[package]
name = "perfweave-collector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "perfweave-collector"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
perfweave-proto = { path = "../perfweave-proto" }
perfweave-common = { path = "../perfweave-common" }

tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
futures.workspace = true
clickhouse.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
clap.workspace = true
parking_lot.workspace = true
ahash.workspace = true
