[package]
name = "perfweave-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
perfweave-proto = { path = "../perfweave-proto" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xxhash-rust.workspace = true
ahash.workspace = true
parking_lot.workspace = true
