[package]
name = "perfweave-cupti-inject"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Building the real .so requires CUPTI headers and linkage; most machines
# do not have those, so the crate builds as a no-op by default and only
# links libcupti when `build` is enabled.
default = []
build = []

[dependencies]
perfweave-proto = { path = "../perfweave-proto" }
perfweave-common = { path = "../perfweave-common" }
prost.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
