[package]
name = "perfweave-nsys-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
perfweave-common = { path = "../perfweave-common" }
perfweave-server = { path = "../perfweave-server" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
