[package]
name = "perfweave-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "perfweave-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
perfweave-common = { path = "../perfweave-common" }
perfweave-proto  = { path = "../perfweave-proto" }

tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tonic.workspace = true
prost.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
clickhouse.workspace = true
arrow.workspace = true
arrow-ipc.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
parking_lot.workspace = true
ahash.workspace = true
arc-swap = "1.7"
